[gd_scene load_steps=32 format=4 uid="uid://baixjoveubu2p"]

[ext_resource type="Texture2D" uid="uid://dvyenvqoy76km" path="res://tile.png" id="1_5s4o4"]
[ext_resource type="Texture2D" uid="uid://c8jteexdneiw8" path="res://Bg still.PNG" id="1_xtltr"]
[ext_resource type="Texture2D" uid="uid://1bphfnv5qalu" path="res://atlas.png" id="2_gyhg8"]
[ext_resource type="Script" path="res://tile_map_layer.gd" id="2_kwlco"]
[ext_resource type="PackedScene" uid="uid://dnbrpve5d416o" path="res://Characters/player.tscn" id="3_d40aa"]
[ext_resource type="Script" path="res://Characters/doll.gd" id="3_qdbco"]
[ext_resource type="Resource" uid="uid://bwuy05uunjbxo" path="res://Skills/jump.tres" id="4_bjigt"]
[ext_resource type="Texture2D" uid="uid://ud0u7qcelavi" path="res://bigmc.PNG" id="4_pbpbx"]
[ext_resource type="PackedScene" uid="uid://va36l5srkgvk" path="res://Levels/Skill Selection/button_slot.tscn" id="4_vuqmq"]
[ext_resource type="Resource" uid="uid://dha4a04qbyhy2" path="res://Skills/break.tres" id="5_h5cr8"]
[ext_resource type="Script" path="res://game_ui.gd" id="6_448wm"]
[ext_resource type="PackedScene" uid="uid://b7fttkpcu4ffw" path="res://Levels/level_summary.tscn" id="7_b3te7"]
[ext_resource type="Shader" path="res://Shaders/portal.gdshader" id="7_c8ptl"]
[ext_resource type="Texture2D" uid="uid://drfeyyuafjb3t" path="res://Bintang buat bg.PNG" id="7_jipjk"]
[ext_resource type="Texture2D" uid="uid://c72de3ljdgo0k" path="res://List buttons.PNG" id="7_vuy38"]
[ext_resource type="Script" path="res://Levels/stage_manager.gd" id="8_rje0b"]
[ext_resource type="Resource" uid="uid://boulre7hs3tgn" path="res://Skills/restoration.tres" id="9_0pl5i"]
[ext_resource type="Texture2D" uid="uid://pgftvqjjbihw" path="res://Environments/wall.tres" id="9_ytsf0"]
[ext_resource type="Texture2D" uid="uid://ct0kko8nok8yl" path="res://wallanimated.png" id="10_e1pfk"]
[ext_resource type="Resource" uid="uid://dcvk31ymhey7v" path="res://Skills/possess.tres" id="10_qtdkd"]
[ext_resource type="PackedScene" uid="uid://cj7l5wswmuu8a" path="res://Common/Pause Menu/pause_menu.tscn" id="18_icp2c"]
[ext_resource type="Resource" uid="uid://cpq6nhdackybv" path="res://Skills/push.tres" id="21_vigwg"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_s2kuh"]
texture = ExtResource("1_5s4o4")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
0:0/0/custom_data_0 = true
1:0/0 = 0
0:1/0 = 0
1:1/0 = 0
1:1/0/custom_data_0 = true
1:1/0/custom_data_1 = true

[sub_resource type="ShaderMaterial" id="ShaderMaterial_q5g6c"]
shader = ExtResource("7_c8ptl")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_1qw7p"]
texture = ExtResource("2_gyhg8")
texture_region_size = Vector2i(119, 119)
0:0/0 = 0
1:0/0 = 0
1:0/0/material = SubResource("ShaderMaterial_q5g6c")
1:0/0/custom_data_0 = true
1:0/0/custom_data_1 = true
2:0/0 = 0
2:0/0/custom_data_0 = true
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
2:1/0/custom_data_0 = true
0:2/0 = 0
0:2/0/custom_data_0 = true

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ifq5u"]
texture = ExtResource("9_ytsf0")
texture_region_size = Vector2i(119, 119)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_m7yyv"]
texture = ExtResource("10_e1pfk")
texture_region_size = Vector2i(119, 119)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_xhwa0"]
tile_size = Vector2i(119, 119)
custom_data_layer_0/name = "walkable"
custom_data_layer_0/type = 1
custom_data_layer_1/name = "finish"
custom_data_layer_1/type = 1
sources/0 = SubResource("TileSetAtlasSource_s2kuh")
sources/1 = SubResource("TileSetAtlasSource_1qw7p")
sources/2 = SubResource("TileSetAtlasSource_ifq5u")
sources/3 = SubResource("TileSetAtlasSource_m7yyv")

[sub_resource type="Gradient" id="Gradient_labue"]
offsets = PackedFloat32Array(0, 0.977612)
colors = PackedColorArray(0, 0, 0, 1, 0.838196, 0.803071, 0.858529, 0.778)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_phjvy"]
gradient = SubResource("Gradient_labue")

[sub_resource type="Environment" id="Environment_qtcs4"]
background_mode = 3
glow_levels/1 = 1.0
glow_levels/2 = 1.0
glow_levels/4 = 1.0
glow_levels/5 = 0.0
glow_levels/6 = 1.0
glow_normalized = true
glow_intensity = 7.66
glow_strength = 2.0
glow_blend_mode = 1
adjustment_brightness = 1.08
adjustment_contrast = 0.92
adjustment_saturation = 2.1
adjustment_color_correction = SubResource("GradientTexture1D_phjvy")

[node name="Level" type="CanvasLayer"]

[node name="BG" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.16, 1.15215)
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="BG"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_right = 1.919
anchor_bottom = 1.961
offset_left = -115.56
offset_top = -2.56
offset_right = -0.0402832
offset_bottom = -0.440186
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("1_xtltr")

[node name="TextureRect2" type="TextureRect" parent="BG"]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("1_xtltr")

[node name="TextureRect3" type="TextureRect" parent="BG"]
layout_mode = 1
offset_right = 1920.0
offset_bottom = 1080.0
mouse_filter = 2
texture = ExtResource("7_jipjk")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAFAAIAAQAAAAIAAAAFAAMAAQAAAAIAAAAFAAQAAQAAAAIAAAAFAAUAAQAAAAIAAAAFAAYAAQAAAAIAAAAGAAIAAQAAAAIAAAAGAAMAAQAAAAIAAAAGAAQAAQAAAAIAAAAGAAUAAQAAAAIAAAAGAAYAAQAAAAIAAAAHAAIAAwAAAAAAAAAHAAMAAwAAAAAAAAAHAAQAAwAAAAAAAAAHAAUAAwAAAAAAAAAHAAYAAwAAAAAAAAAIAAIAAQAAAAIAAAAIAAMAAQAAAAIAAAAIAAQAAQAAAAIAAAAIAAUAAQAAAAIAAAAIAAYAAQAAAAIAAAAJAAIAAQAAAAIAAAAJAAMAAQAAAAIAAAAJAAQAAQAAAAIAAAAJAAUAAQAAAAIAAAAJAAYAAQAAAAIAAAAFAAcAAQAAAAIAAAAGAAcAAQAAAAIAAAAHAAcAAwAAAAAAAAAIAAcAAQAAAAIAAAAJAAcAAQAAAAIAAAAKAAEAAwAAAAAAAAAKAAIAAQAAAAIAAAAKAAMAAQAAAAIAAAAKAAQAAQABAAAAAAAKAAUAAQAAAAIAAAAKAAYAAQAAAAIAAAAKAAcAAQAAAAIAAAAFAAEAAwAAAAAAAAAGAAEAAwAAAAAAAAAHAAEAAwAAAAAAAAAIAAEAAwAAAAAAAAAJAAEAAwAAAAAAAAAEAAIAAwAAAAAAAAAEAAMAAwAAAAAAAAAEAAQAAwAAAAAAAAAEAAUAAwAAAAAAAAAEAAYAAwAAAAAAAAAEAAcAAwAAAAAAAAALAAEAAwAAAAAAAAALAAIAAwAAAAAAAAALAAMAAwAAAAAAAAALAAQAAwAAAAAAAAALAAUAAwAAAAAAAAALAAYAAwAAAAAAAAALAAcAAwAAAAAAAAAEAAgAAwAAAAAAAAAFAAgAAwAAAAAAAAAGAAgAAwAAAAAAAAAHAAgAAwAAAAAAAAAIAAgAAwAAAAAAAAAJAAgAAwAAAAAAAAAKAAgAAwAAAAAAAAALAAgAAwAAAAAAAAAEAAEAAwAAAAAAAAA=")
tile_set = SubResource("TileSet_xhwa0")
script = ExtResource("2_kwlco")

[node name="Player" parent="." instance=ExtResource("3_d40aa")]
position = Vector2(652, 541)
skill_1 = ExtResource("4_bjigt")
skill_2 = ExtResource("5_h5cr8")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
follow_viewport_enabled = true
script = ExtResource("6_448wm")
score_board = ExtResource("7_b3te7")

[node name="Time" type="Label" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -29.0
offset_right = 29.0
offset_bottom = 23.0
grow_horizontal = 2
size_flags_horizontal = 4
text = "yeahhh"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Move" type="Label" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -31.0
offset_top = 33.0
offset_right = 27.0
offset_bottom = 56.0
grow_horizontal = 2
size_flags_horizontal = 4
text = "yeahhh"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StageManager" type="Node2D" parent="."]
script = ExtResource("8_rje0b")

[node name="Enemies" type="Node" parent="."]

[node name="Environments" type="Node" parent="."]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -115.0
offset_top = -2.0
offset_right = -75.0
offset_bottom = 38.0
scale = Vector2(1.12, 1.12)
mouse_filter = 2

[node name="Doll" type="TextureRect" parent="Control"]
layout_mode = 0
offset_left = -107.143
offset_top = 258.929
offset_right = 972.857
offset_bottom = 1338.93
scale = Vector2(0.75, 0.75)
mouse_filter = 2
texture = ExtResource("4_pbpbx")
script = ExtResource("3_qdbco")

[node name="Left Button" parent="Control/Doll" instance=ExtResource("4_vuqmq")]
layout_mode = 0
offset_left = 303.572
offset_top = 553.571
offset_right = 663.572
offset_bottom = 914.571

[node name="Right Button" parent="Control/Doll" instance=ExtResource("4_vuqmq")]
layout_mode = 0
offset_left = 516.667
offset_top = 530.952
offset_right = 876.667
offset_bottom = 891.952

[node name="ConfirmButton" type="Button" parent="Control"]
layout_mode = 0
offset_left = 163.393
offset_top = 365.179
offset_right = 245.393
offset_bottom = 396.179
text = "CONFIRM"

[node name="ButtonList" type="TextureRect" parent="Control"]
layout_mode = 1
offset_left = 125.893
offset_top = 41.9643
offset_right = 2045.89
offset_bottom = 1121.96
scale = Vector2(0.934199, 0.934199)
mouse_filter = 2
texture = ExtResource("7_vuy38")

[node name="Button1" parent="Control/ButtonList" instance=ExtResource("4_vuqmq")]
layout_mode = 0
offset_left = 1383.93
offset_top = 236.607
offset_right = 1743.93
offset_bottom = 597.607

[node name="TextureRect" parent="Control/ButtonList/Button1" index="0"]
button = ExtResource("4_bjigt")

[node name="Button2" parent="Control/ButtonList" instance=ExtResource("4_vuqmq")]
layout_mode = 0
offset_left = 1385.83
offset_top = 388.989
offset_right = 1745.83
offset_bottom = 749.989

[node name="TextureRect" parent="Control/ButtonList/Button2" index="0"]
button = ExtResource("5_h5cr8")

[node name="Button3" parent="Control/ButtonList" instance=ExtResource("4_vuqmq")]
layout_mode = 0
offset_left = 1389.66
offset_top = 539.997
offset_right = 1749.66
offset_bottom = 900.997

[node name="TextureRect" parent="Control/ButtonList/Button3" index="0"]
button = ExtResource("9_0pl5i")

[node name="Button4" parent="Control/ButtonList" instance=ExtResource("4_vuqmq")]
layout_mode = 0
offset_left = 1386.79
offset_top = 687.182
offset_right = 1746.79
offset_bottom = 1048.18

[node name="TextureRect" parent="Control/ButtonList/Button4" index="0"]
button = ExtResource("10_qtdkd")

[node name="Button5" parent="Control/ButtonList" instance=ExtResource("4_vuqmq")]
layout_mode = 0
offset_left = 1385.83
offset_top = 836.278
offset_right = 1745.83
offset_bottom = 1197.28

[node name="TextureRect" parent="Control/ButtonList/Button5" index="0"]
button = ExtResource("21_vigwg")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_qtcs4")

[node name="PauseMenu" parent="." instance=ExtResource("18_icp2c")]
visible = false

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(135, 78)
offset = Vector2(960, 540)
zoom = Vector2(0.89, 0.89)

[connection signal="pressed" from="Control/ConfirmButton" to="Control/Doll" method="_on_confirm_button_pressed"]

[editable path="Control/ButtonList/Button1"]
[editable path="Control/ButtonList/Button2"]
[editable path="Control/ButtonList/Button3"]
[editable path="Control/ButtonList/Button4"]
[editable path="Control/ButtonList/Button5"]
